--- a/test.html
+++ b/test.html
@@ -12,8 +12,5 @@ const pingHost = async (url) => {
     }
 };
 
-pingHost('http://0.0.0.0/vuln.txt');
-pingHost('http://0.0.0.0:8080/vuln.txt');
-pingHost('http://0.0.0.0:443/vuln.txt');
-pingHost('https://0.0.0.0:80/vuln.txt');
+pingHost('https://0.0.0.0:4443');
 </script>
