--- a/test.html
+++ b/test.html
@@ -7,6 +7,8 @@ const pingHost = async (url) => {
 
         console.log(`Ping to ${url}: Alive`);
         console.log(`Time: ${endTime - startTime} ms`);
+        const text = await response.text();
+        console.log("Response content:", text);
     } catch (error) {
         console.error(`Error pinging ${url}:`, error);
     }
